Last checked timestamp is not updated when you leave the window open
Last checked timestamp at the bottom of the window is not updated as time passes when the window is open. You can leave the update window open for hours, but the label will still say "Last checked: Just now". I think it is important to update the timestamp because it gives the user a hint that they need to check for updates.
Version: 40.2
Edited by Andrey Kozlovskiy