gs-updates-page: Refresh "Last checked:" information periodically

Helps to keep the information up to date when the user lefts the window
open at the Updates page.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/1298